add auth() call to mongostat SERVER-3875

with this fix, mongostat can work with authentication enabled.